# LibESN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
LibESN/: __init__.py  base_datetime.py  base_utils.py  console.py  esn.py  esn_fit.py  esn_forecast.py  esn_states.py  matrix_generator.py  mfesn.py  mfesn_fit.py  mfesn_forecast.py  mfesn_states.py
LibESN/tests/: test_base_functions.py  test_esn_module.py  test_test_test.py  time_base_functions.py  time_esn_states.py
LibESN/tests/jupyter/: basic_esn.ipynb
docs/: LibESN.html  index.html  search.js
docs/LibESN/: base_datetime.html  base_functions.html  base_utils.html  console.html  datasets.html  datautils.html  datetime.html  esn.html  esn_fit.html  esn_forecast.html  esn_states.html  matgen.html  matrix_generator.html  mfesn.html  mfesn_fit.html  mfesn_forecast.html  mfesn_states.html  ufuncs.html  validation.html
examples/: example_lorenz.ipynb
legacy/: README.md  newToolbox_ESN_Multi.py
libesn/: crossval.py  datautils.py  datetime.py  esn.py  esn_fit.py  matgen.py  mfesn_fit.py  ufuncs.py  validation.py
libesn_legacy/: README.md  __init__.py  base_functions.py  datasets.py  esn.py  esn_fit.py  esn_forecast.py  esn_states.py  mfesn.py  mfesn_fit.py  mfesn_forecast.py  mfesn_states.py  pyproject_legacy.toml
libesn_legacy/tests/: test_base_functions.py  test_esn_module.py  test_test_test.py  time_esn_states.py
tests/: test_base_functions.py  test_esn_module.py  test_test_test.py  time_base_functions.py  time_esn_states.py
tests/jupyter/: mf_esn.ipynb
