[project]
name = "LibESN"
description = "Python library for single and multi-frequency ESN models"
readme = "README.md"
requires-python = ">=3.9"
license = { text="GPL-3.0" }
# authors = [{name = "?", email = "?"}]
dynamic = ["version"]

dependencies = [
    "torch >= 2.3",
    "pandas >= 2.2",
    "numpy >= 1.26.0",
    "scipy >= 1.12",
    "cvxopt >= 1.3",
    "rich >= 13.7",
    "matplotlib >= 3.8",
    "pdoc >= 14.4",
]

[project.urls]
Source = "https://github.com/RCEconModelling/LibESN"
# Documentation = "https://?"
Issues = "https://github.com/RCEconModelling/LibESN/issues"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
include = ["LibESN*"]